Updated website ! 3 pages connected!

--- a/About.html
+++ b/About.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
+    <header>
+        <h1> Charbel Ghosn </h1>
+        <nav> <a href="1home.html">Home</a>
+              <a href="About.html">About</a>
+              <a href="work.html">Work</a>
+        </nav>
+
+
+        </header>
 <h1> About </h1>
 <div>   
     
@@ -24,6 +34,6 @@
         <p> I was excited to see that Company ABC is hiring an event manager skilled at increasing brand awareness and driving growth with high-traffic events, especially since I've attended several of your company's speaking events myself. With my five years of experience coordinating successful events in the corporate space, I'm confident I'm a great fit for the role. </p>
      </ul>
 </div>
-    
+<footer> <a href="https://www.instagram.com/charbeezy_24/?hl=en"><img class="instagram" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt=""></a></footer>
 </body>
 </html>
