--- a/1home.html
+++ b/1home.html
@@ -9,12 +9,28 @@
 </head>
 
 <body>
-<H1> Developer, Artist, Mentor</H1>
-<p> Interested in helping companies with development issues no matter the size or time consuming it can be </p>
+    <header>
+        <h1> Charbel Ghosn </h1>
+        <nav> <a href="1home.html">Home</a>
+              <a href="About.html">About</a>
+              <a href="work.html">Work</a>
+        </nav>
 
 
-
-
+        </header>
+    </nav>
+    </header>
+     <div class="fitter">  
+      <h2> Developer. Artist. Mechanic. Engineer. </h2>
+      <p> Interested in helping companies with development issues no matter the size or time consuming it can be </p>
+      <q> ''A lot of leaders fail because they don’t have the bravery to touch that nerve or strike that chord.'' - Kobe Bryant</q>
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music123/v4/47/a1/12/47a11210-da12-59ce-d38d-6173b0edf018/pr_source.png/375x375bb.jpg" alt="">
     
+</div>
+
+
+
+
+    <footer> <a href="https://www.instagram.com/charbeezy_24/?hl=en"><img class="instagram" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt=""></a></footer>
 </body>
 </html>
