--- a/work.html
+++ b/work.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-    
+    <header>
+        <h1> Charbel Ghosn </h1>
+        <nav> <a href="1home.html">Home</a>
+              <a href="About.html">About</a>
+              <a href="work.html">Work</a>
+        </nav>
+
+
+        </header>
+        <footer> <a href="https://www.instagram.com/charbeezy_24/?hl=en"><img class="instagram" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt=""></a></footer>
 </body>
 </html>
