--- a/work.html
+++ b/work.html
@@ -12,9 +12,10 @@
 <body>
     <header>
         <h1> Charbel Ghosn </h1>
-        <nav> <a href="1home.html">Home</a>
+        <nav> <a href="index.html">Home</a>
               <a href="About.html">About</a>
               <a href="work.html">Work</a>
+              <a href="contact.html">Contact</a>
         </nav>
 
 
