--- a/About.html
+++ b/About.html
@@ -28,12 +28,12 @@
         <li> Bilingual </li>
         <li> Hard Worker </li>
         <li> Im 24 Years old </li>
-        <li> Middle eatsern </li>
+        <li> Middle eastern </li>
         <li> I love sports and video games </li>
         <li> I love Mercedes cars </li>
         <li> I love hanging out with friends and family </li>
-        <p> I was excited to see that Company ABC is hiring an event manager skilled at increasing brand awareness and driving growth with high-traffic events, especially since I've attended several of your company's speaking events myself. With my five years of experience coordinating successful events in the corporate space, I'm confident I'm a great fit for the role. </p>
      </ul>
+     <p class="newp"> I was excited to see that Company ABC is hiring an event manager skilled at increasing brand awareness and driving growth with high-traffic events, especially since I've attended several of your company's speaking events myself. With my five years of experience coordinating successful events in the corporate space, I'm confident I'm a great fit for the role. </p>
 </div>
 
 
